# delicacymap

./: MapProtocol.proto  Message.proto  ProjectHome.md  delicacyClient.psess  delicacymapOnCE.sln
QtMobility/include/: QSystemDeviceInfo  qgeoareamonitor.h  qgeopositioninfosource.h  qgeosatelliteinfo.h  qgeosatelliteinfosource.h  qmobilityglobal.h  qnetworksession.h  qnmeapositioninfosource.h
QtMobility/lib_symbian/: qtlocation_tp_release-armv6.sis
QtMobility/lib_win32/: QtBearer.lib  QtBearer_tp.lib  QtBearerd.lib  QtLocation.lib  QtLocation_tp.exp  QtLocation_tp.lib  QtLocationd.lib  QtSystemInfo.lib  QtSystemInfod.lib
QtMobility/lib_wince/: QtBearer_tp.lib  QtSystemInfo.lib
branches/NativeTile/: delicacyClient.psess  delicacymapOnCE.sln
branches/NativeTile/deliciousServer/makefile/: Makefile.am
branches/symbian/: compile-pb.bat
branches/symbian/deliciousServer/makefile/: Makefile.am  Makefile.in  configure  configure.in  depcomp
deliciousClient/: AddNewRestaurantForm.cpp  AddNewRestaurantForm.h  AddNewRestaurantForm.ui  CommentItemDelegate.h  Configurations.cpp  Configurations.h  ConnectionManager.cpp  CustomEvents.h  DisplaySchema.cpp  DisplaySchema.h  GPSLocationSvc_wince.cpp  GPSLocationSvc_wince.h  GenVCProj_Win32.bat  GenVCProj_Wince.bat  LocationSvc.cpp  LocationSvc.h  LoginWindow.cpp  LoginWindow.h  Makefile  MapController.cpp  MapController.h  MapDataSource.cpp  MapDataSource.h  MapListener.cpp  MapListener.h  MapListenerPrivate.cpp  MapListenerPrivate.h  Message.pb.h  QTProbufController.cpp  QTProbufController.h  QTProtobufChannel.cpp  QTProtobufChannel.h  QTProtobufChannelDriver.cpp  QTProtobufWaitResponse.cpp  RestaurantInfoForm.cpp  RestaurantInfoForm.h  RestaurantInfoForm.ui  RoutingForm.cpp  RoutingForm.h  RoutingForm.ui  (+39 more)
deliciousClient/OfflineMap/: CoordsHelper.h  Decorator.cpp  Decorator.h  Downloader.cpp  Downloader.h  EditableRouteMarker.cpp  GeoCoord.cpp  GeoCoord.h  ImageCache.cpp  ImageCache.h  MapDecorators.cpp  MapServices.cpp  MapServices.h  MapViewBase.cpp  (+4 more)
deliciousServer/: AsioRpcController.cpp  DBContext.cpp  DBPrepared.h  DBResult.cpp  DBResult.h  DMServiceLocalDBImpl.cpp  DMServiceLocalDBImpl.h  Messenger.cpp  Messenger.h  ProtubufDBRowConversion.cpp  ProtubufDBRowConversion.h  ReadMe.txt  delicacyDB.db3  deliciousDataAdapter.cpp  deliciousDataAdapter.h  deliciousServer.cpp  deliciousServer.vcproj  naked_conn.cpp  naked_conn.h  stdafx.cpp  stdafx.h  tcpserver.h
delicousDBManager/: App.xaml  App.xaml.cs  CommentPreview.xaml  CommentPreview.xaml.cs  DataViews.cs  MainWindow.xaml  MainWindow.xaml.cs  ValueConverters.cs  app.config  delicacyDB.Designer.cs  delicacyDB.xsd  delicacyDB.xss  delicousDBManager.csproj  get_location.htm
docs/: 08年立项项目汇总.xls  功能列表.doc  功能总结.doc  手机美食社区项目报告书.doc  演示场景设计.doc  结题报告书.doc  高压统筹0123跟踪.mpp
protocol-buffer-src/: MapProtocol.pb.cc  MapProtocol.pb.h  Message.pb.cc  Message.pb.h
trunk/: MapProtocol.proto  Message.proto  compile-pb.bat  delicacymapOnCE.sln
(+314 files in other folders)
