#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT(deliciousServer, 1.0)
AM_INIT_AUTOMAKE(deliciousServer, 1.0)

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_REALLOC

AC_OUTPUT(Makefile)

